# ckanext-parquet

./: MANIFEST.in  README.md  build.mjs  hyparquet.bundle.js  package-lock.json  package.json  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/parquet/: plugin.py
ckanext/parquet/assets/: script.js  webassets.yml
ckanext/parquet/assets/css/: hyparquet.min.css  styles.css
ckanext/parquet/assets/js/: hyparquet.min.js
ckanext/parquet/logic/: schema.py
ckanext/parquet/public/hightable-parquet.bundle.js/: hightable-parquet.bundle.js
ckanext/parquet/templates/parquet/: parquet_form.html  parquet_view.html
ckanext/parquet/tests/: test_plugin.py
hyparquet/: index.html  package.json  vite.config.ts
hyparquet/src/: App.tsx  Page.tsx  ParquetMetadata.tsx  index.scss  main.tsx
hyparquet/src/assets/: spinner.tsx
