[project]
name = "ckanext-parquet"
version = "0.0.1"
description = "Preview for parquet file format"
readme = "README.md"
authors = [
    {name = "Oleksandr Cherniavskyi", email = "mutantsan@gmail.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = [ "CKAN", "preview", "parquet", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/DataShades/ckanext-parquet"

[project.entry-points."ckan.plugins"]
parquet_view = "ckanext.parquet.plugin:ParquetPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W"]
